[package]
name = "quote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15.5"
socket2 = { version = "0.3.4", features = ["reuseport"] }
lazy_static = "1.0"
log = "0.4.14"
chrono = "0.4.19"
env_logger = "0.9.0"
filebuffer = "0.4.0"
rayon = "1.5.1"
crossbeam-channel = "0.5"
bus = "2.2.3"
redis = "0.21.4"
libc = "0.2"
bytes-cast = "0.2.0"
# arrow2 = "0.12.0"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }

[dev-dependencies]
test-case = "1.2.1"
bencher = "0.1.5"
mockall = "0.10.2"


[[bench]]
name = "lib"
harness = false